--- a/lesson_19-2/index.html
+++ b/lesson_19-2/index.html
@@ -123,7 +123,7 @@
           <div class="hot-category__container">
             <h3 class="hot-category__title">Explore new and popular styles</h3>
             <div class="hot-category__popular popular-container">
-              <a href="#" class="popular-container__item">
+              <div class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <button type="button" class="labels-product__red">
                     <span>hot</span>
@@ -143,8 +143,8 @@
                 </div>
                 <img src="./img/popular-container__image01.webp" alt="photo"
                   class="popular-container__image">
-              </a>
-              <a href="#" class="popular-container__item">
+              </div>
+              <div class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <button type="button" class="labels-product__red">
                     <span>hot</span>
@@ -164,8 +164,8 @@
                 </div>
                 <img src="./img/popular-container__image02.webp" alt="photo"
                   class="popular-container__image">
-              </a>
-              <a href="#" class="popular-container__item">
+              </div>
+              <div class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <button type="button" class="labels-product__red">
                     <span>hot</span>
@@ -185,8 +185,8 @@
                 </div>
                 <img src="./img/popular-container__image03.webp" alt="photo"
                   class="popular-container__image">
-              </a>
-              <a href="#" class="popular-container__item">
+              </div>
+              <div class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <button type="button" class="labels-product__red">
                     <span>hot</span>
@@ -206,8 +206,8 @@
                 </div>
                 <img src="./img/popular-container__image04.webp" alt="photo"
                   class="popular-container__image">
-              </a>
-              <a href="#" class="popular-container__item">
+              </div>
+              <div class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <button type="button" class="labels-product__red">
                     <span>hot</span>
@@ -227,7 +227,7 @@
                 </div>
                 <img src="./img/03.jpg" alt="photo"
                   class="popular-container__image">
-              </a>
+              </div>
             </div>
           </div>
         </section>
@@ -266,7 +266,7 @@
             </div>
             <div class="section-products__grid grid-products">
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -304,10 +304,10 @@
                       <div class="contant-products__current-price">$90</div>
                     </div>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -343,10 +343,10 @@
                     <span class="contant-products__type">bag</span>
                     <span class="contant-products__price">$130.85</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -381,10 +381,10 @@
                     <span class="contant-products__type">scarf</span>
                     <span class="contant-products__price">$53.00</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -419,10 +419,10 @@
                     <span class="contant-products__type">Dress</span>
                     <span class="contant-products__price">$63.85</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -452,10 +452,10 @@
                     <span class="contant-products__type">Dress</span>
                     <span class="contant-products__price">$263.85</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -490,10 +490,10 @@
                     <span class="contant-products__type">shoe</span>
                     <span class="contant-products__price">$198.00</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__image image-products">
                     <img src="./img/products07.webp" alt="photo-product"
                       class="image-products__img">
@@ -517,10 +517,10 @@
                     <span class="contant-products__type">dress</span>
                     <span class="contant-products__price">$120.50</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -556,7 +556,7 @@
                     <span class="contant-products__type">Glasses</span>
                     <span class="contant-products__price">$160</span>
                   </div>
-                </a>
+                </div>
               </article>
             </div>
           </div>
@@ -612,7 +612,7 @@
             </div>
             <div class="slider-products__grid grid-products">
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -651,10 +651,10 @@
                       <div class="contant-products__current-price">$90</div>
                     </div>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -690,10 +690,10 @@
                     <span class="contant-products__type">bag</span>
                     <span class="contant-products__price">$130.85</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -728,10 +728,10 @@
                     <span class="contant-products__type">scarf</span>
                     <span class="contant-products__price">$53.00</span>
                   </div>
-                </a>
+                </div>
               </article>
               <article>
-                <a href="#" class="grid-products__item">
+                <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <button type="button" class="labels-product__red">
                       <span>hot</span>
@@ -766,7 +766,7 @@
                     <span class="contant-products__type">Dress</span>
                     <span class="contant-products__price">$63.85</span>
                   </div>
-                </a>
+                </div>
               </article>
             </div>
           </div>
