--- a/lesson_19-3/index.html
+++ b/lesson_19-3/index.html
@@ -270,7 +270,7 @@
             </div>
             <div class="section-products__grid grid-products">
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -302,8 +302,12 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Adicolor Classics
-                    Joggers</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Adicolor Classics
+                      Joggers
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">Dress</span>
                     <div class="contant-products__price">
@@ -314,7 +318,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -347,8 +351,12 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Nike Sportswear Futura
-                    Luxe</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Sportswear Futura
+                      Luxe
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">bag</span>
                     <span class="contant-products__price">$130.85</span>
@@ -356,7 +364,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -388,8 +396,12 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Geometric print
-                    Scarf</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Geometric print
+                      Scarf
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">scarf</span>
                     <span class="contant-products__price">$53.00</span>
@@ -397,7 +409,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -429,8 +441,12 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Yellow Reserved
-                    Hoodie</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Yellow Reserved
+                      Hoodie
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">Dress</span>
                     <span class="contant-products__price">$63.85</span>
@@ -438,7 +454,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -471,7 +487,11 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Basic Dress Green</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Basic Dress Green
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">Dress</span>
                     <span class="contant-products__price">$263.85</span>
@@ -479,7 +499,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -511,8 +531,12 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Nike Air Zoom
-                    Pegasus</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Air Zoom
+                      Pegasus
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">shoe</span>
                     <span class="contant-products__price">$198.00</span>
@@ -520,7 +544,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -552,7 +576,11 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Nike Repel Miler</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Repel Miler
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">dress</span>
                     <span class="contant-products__price">$120.50</span>
@@ -560,7 +588,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -592,8 +620,11 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Nike Sportswear Futura
-                    Luxe</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Repel Miler
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">Glasses</span>
                     <span class="contant-products__price">$160</span>
@@ -652,7 +683,7 @@
             </div>
             <div class="slider-products__grid grid-products">
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -683,8 +714,11 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Adicolor Classics
-                    Joggers</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Repel Miler
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">Dress</span>
                     <div class="contant-products__price">
@@ -695,7 +729,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -726,8 +760,11 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Nike Sportswear Futura
-                    Luxe</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Repel Miler
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">bag</span>
                     <span class="contant-products__price">$130.85</span>
@@ -735,7 +772,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -766,8 +803,11 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Geometric print
-                    Scarf</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Repel Miler
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">scarf</span>
                     <span class="contant-products__price">$53.00</span>
@@ -775,7 +815,7 @@
                 </div>
               </article>
               <article>
-                <h2></h2>
+
                 <div class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">
@@ -806,8 +846,11 @@
                       <span>shop now</span>
                     </button>
                   </div>
-                  <a href="#" class="grid-products__name">Yellow Reserved
-                    Hoodie</a>
+                  <a href="#" class="grid-products__name">
+                    <h3>
+                      Nike Repel Miler
+                    </h3>
+                  </a>
                   <div class="grid-products__contant contant-products">
                     <span class="contant-products__type">Dress</span>
                     <span class="contant-products__price">$63.85</span>
