--- a/lesson_19-3/index.html
+++ b/lesson_19-3/index.html
@@ -88,7 +88,7 @@
         </section>
         <section class="brand">
           <div class="brand__container">
-            <h2></h2>
+            <h2 class="brand__title">title</h2>
             <ul class="brand__list">
               <li class="brand__item">
                 <a href="#" class="brand__link">
@@ -288,7 +288,7 @@
                       src="./img/top-product01.jpg"
                       alt="photo-product">
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -337,7 +337,7 @@
                       class="image-products__img">
 
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -382,7 +382,7 @@
                       class="image-products__img">
 
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -427,7 +427,7 @@
                       class="image-products__img">
 
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -473,7 +473,7 @@
                       class="image-products__img">
 
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -517,7 +517,7 @@
                       class="image-products__img">
 
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -562,7 +562,7 @@
                       class="image-products__img">
 
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -606,7 +606,7 @@
                       class="image-products__img">
 
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -700,7 +700,7 @@
                     <img src="./img/top-product01.jpg" alt="photo-product"
                       class="image-products__img">
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -746,7 +746,7 @@
                     <img src="./img/top-product02.jpg" alt="photo-product"
                       class="image-products__img">
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -789,7 +789,7 @@
                     <img src="./img/top-product03.jpg" alt="photo-product"
                       class="image-products__img">
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
@@ -832,7 +832,7 @@
                     <img src="./img/top-product02.jpg" alt="photo-product"
                       class="image-products__img">
                   </a>
-                  <div class="image-products__submenu submenu-products">
+                  <div class="grid-products__submenu submenu-products">
                     <div class="submenu-products__left">
                       <button type="button">
                         <img src="./img/icon-like.svg" alt="icon-like">
